fix: align virtual table headers and rows

--- a/apps/web/src/features/preview/data-panel.css
+++ b/apps/web/src/features/preview/data-panel.css
@@ -62,6 +62,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
   height: 32px;
 }
 
